# MathLib

./: .gitmodules  CMakeLists.txt  Mat3.cpp  Mat4.cpp  Quaternion.cpp  README.md  Vec2.cpp  Vec3.cpp  Vec4.cpp
Test/: Mat3_Test.cpp  Mat4_Test.cpp  Quaternion_Test.cpp  RunTests.cpp  TestMatUtils.cpp  TestUtils.cpp  TestVecUtils.cpp  Vec2_Test.cpp  Vec3_Test.cpp  Vec4_Test.cpp
Test/include/: Mat3_Test.h  Mat4_Test.h  Quaternion_Test.h  TestMatUtils.h  TestUtils.h  TestVecUtils.h  Vec2_Test.h  Vec3_Test.h  Vec4_Test.h
include/: Mat3.h  Mat4.h  Quaternion.h  TM.h  TM_Intrinsics.h  TM_Mat3.h  TM_Mat4.h  TM_Quaternion.h  TM_Types.h  TM_Utils.h  TM_Vec2.h  TM_Vec3.h  TM_Vec4.h  TMath.h  Utils.h  Vec2.h  Vec3.h  Vec4.h
src/: Logger.cpp  Mat3.cpp  Mat4.cpp  Quaternion.cpp  TM_Mat3.cpp  TM_Mat4.cpp  TM_Quaternion.cpp  TM_Vec2.cpp  TM_Vec3.cpp  TM_Vec4.cpp  Vec2.cpp  Vec3.cpp  Vec4.cpp
